--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ton-community/func-js-bin",
   "description": "Distribution of WASM module and binary for func-js",
-  "version": "0.4.4-newops",
+  "version": "0.4.4-newops.1",
   "main": "dist/index.js",
   "author": "TonTech",
   "license": "MIT",
